soprano (2.6.0+dfsg.1-0r1) UNRELEASED; urgency=low

  * New upstream release.

  [ Didier Raboud ]
  * Add symbols for 2.5.63.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 26 Nov 2010 14:43:25 +0100

soprano (2.5.0+dfsg.1-1) unstable; urgency=low

  * New upstream release.

  [ Modestas Vainius ]
  * Make libsoprano4 Recommends in soprano-daemon strictly versioned.
  * Point debian/control Vcs fields to the new Git repository.
  * Bump Standards-Version to 3.9.1: add/replace Conflicts with Breaks next to
    Replaces as needed.
  * Require cmake 2.6.2, not 2.6.8.
  * Switch to source format 3.0 (quilt):
    - remove quilt build dependency;
    - bump pkg-kde-tools build dependency to 0.9.
  * Move debug package to the bottom of debian/control.
  * Update sumbol file for 2.5.0 on amd64.
  * Replace common-licenses/BSD with real license text.

  [ George Kiagiadakis ]
  * With the new version of doxygen (1.7.1), there are not longer *.gif
    files in the documentation. (Closes: #590400).
  * Update symbol file for 2.4.64 and confirm on amd64 and i386.

  [ Ana Beatriz Guerrero Lopez ]
  * Add versioned build dependend on doxygen (>= 1.7.1), full documentation
    will not be installed if you build the package with a previous version.

  [ Bjoern Ricks ]
  * Update symbol file for 2.4.63 on i386

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 08 Aug 2010 02:07:52 +0300

soprano (2.4.3+dfsg.1-1) unstable; urgency=low

  * New upstream release.
  * Update symbol file for 2.4.2 on all arches for 2.4.3 on amd64.
  * Add debian/source/format (1.0).

 -- Modestas Vainius <modax@debian.org>  Mon, 17 May 2010 01:08:55 +0300

soprano (2.4.2+dfsg.1-1) unstable; urgency=low

  * New upstream release.

  [ Fathi Boudra ]
  * Use DEP-3 headers on the patches.
  * Cleanup build dependencies versions.
  * Update copyright years.
  * Update symbol file.
